# latent-booking

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
apps/admin-fe/: package.json
apps/http-backend/: package.json
apps/http-backend/src/: index.js  index.ts  users.js
apps/mobile/: .eslintrc.js  .prettierignore  app.json  index.tsx  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/Latent-App/: .prettierrc.js  app.json  package-lock.json  package.json
apps/mobile/app/: app.tsx
apps/mobile/ios/: Podfile
apps/mobile/src/: App.tsx
apps/user-fe/: next.config.js  package.json  tailwind.config.js  tailwind.config.ts
apps/user-fe/api/: auth.ts  client.ts  episodes.ts  events.ts  index.ts  user.ts
apps/user-fe/app/: globals.css  layout.tsx  page.tsx
apps/user-fe/components/: episode.tsx  locked-ep.tsx  vertical-carousel.tsx
apps/user-fe/context/: AuthContext.tsx
apps/user-fe/hooks/: useAuth.ts
apps/user-fe/images/: image.ts
axum-backend/: .env.example  .gitignore  Cargo.toml  README.md  TODO  docker-compose.yml
axum-backend/prisma/: schema.prisma
axum-backend/prisma-cli/src/: main.rs
axum-backend/src/: main.rs
axum-backend/src/handlers/: auth.rs  base.rs
axum-backend/src/routes/: route.rs
axum-backend/src/services/: twilio.rs
axum-backend/src/utils/: mod.rs  totp.rs
latent-backend/: .env.example  README.md
latent-backend/api/: .env.example  Cargo.toml  test.sh
latent-backend/api/src/: api.rs  error.rs  main.rs
latent-backend/db/: Cargo.toml
latent-backend/db/src/: admin.rs  booking.rs  (+5 more)
(+163 files in other folders)
